# eDEX-DE

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dependencies.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build-binaries.yaml  check-pr.yml  ci.yml  pages.yml  release.yml
compositor/: Cargo.toml
compositor/src/: lib.rs  state.rs
compositor/src/backend/: mod.rs  udev.rs
compositor/src/shell/: layer.rs  mod.rs  tiling.rs  xdg.rs
docs/: index.html
docs/assets/css/: style.css
docs/assets/js/: main.js
docs/config/: index.html
docs/dev/: index.html
docs/hyprland/: index.html
docs/install/: index.html
docs/launcher/: index.html
edex-de/: Cargo.toml
edex-de/src/: main.rs
launcher/: Cargo.toml
launcher/src/: desktop.rs  lib.rs  runner.rs  search.rs
notifications/: Cargo.toml
notifications/src/: lib.rs
packaging/: PKGBUILD  README.md  edex-de-hyprland.conf  edex-de-session  edex-de-session.desktop  edex-de.desktop  edex-de.spec  install.sh
packaging/aur/: PKGBUILD  edex-de.install
packaging/debian/: control  edex-de.install  postinst
packaging/linux/deb/: postinst
packaging/rpm/: edex-de.spec
packaging/session/: edex-de-startup.sh  edex-de.desktop
renderer/: Cargo.toml
renderer/src/: lib.rs  wayland_client.rs
renderer/src/shaders/: boot.wgsl  keyboard.wgsl  mod.rs  panel.wgsl  scanline.wgsl
renderer/src/text/: mod.rs
renderer/src/ui/: boot.rs  borders.rs  colors.rs  filesystem.rs  keyboard.rs  launcher.rs  mod.rs  panels.rs  resize.rs  settings.rs  state.rs  statusbar.rs  theme.rs  topbar.rs
settings/: Cargo.toml
settings/src/: config.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: layer_shell.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: audio.rs  audio_control.rs  bluetooth.rs  display.rs  filesystem.rs  fingerprint.rs  greet.rs  hyprland.rs  launcher.rs  mod.rs  network.rs  notifications.rs  power.rs  privacy.rs  settings.rs  sysinfo.rs  systemd.rs  terminal.rs  update_checker.rs  users.rs
src-tauri/src/hyprland/: ipc.rs
src-tauri/src/pty/: server.rs
sysmon/: Cargo.toml
sysmon/src/: battery.rs  collector.rs  cpu.rs  disk.rs  lib.rs  network.rs  privacy.rs  process.rs  ram.rs
terminal/: Cargo.toml
terminal/src/: clipboard.rs  grid.rs  input.rs  instance.rs  lib.rs  pty.rs  tab.rs  vt.rs
themes/: amber.toml  matrix.toml  tron.toml
ui/: index.html
ui/src/: App.tsx
ui/src/assets/css/: boot_screen.css
ui/src/components/: BootScreen.tsx  Placeholder.tsx  StatusBar.tsx  TopBar.tsx  index.ts
ui/src/components/Filesystem/: FileList.tsx
ui/src/components/Launcher/: LauncherOverlay.tsx  index.ts
ui/src/components/Network/: NetworkPanel.tsx
ui/src/components/Privacy/: PrivacyModal.tsx  TailscaleSection.tsx  TorSection.tsx  VpnSection.tsx
ui/src/components/Settings/: HyprlandConfigModal.tsx  SettingsModal.tsx  SettingsPanel.tsx  index.ts
ui/src/components/Settings/pages/: AboutPage.tsx  AppearancePage.tsx  AudioPage.tsx  BluetoothPage.tsx  DisplayPage.tsx  HyprlandPage.tsx  InputPage.tsx  NetworkPage.tsx  NotificationsPage.tsx  PowerPage.tsx  SecurityPrivacyPage.tsx  SystemServicesPage.tsx  TerminalPage.tsx  UsersPage.tsx  index.ts
ui/src/components/Sysinfo/: CpuPanel.tsx  DiskPanel.tsx  NetPanel.tsx  ProcessList.tsx  RamPanel.tsx  SysinfoSidebar.tsx  index.ts
ui/src/components/SystemServices/: ServiceManager.tsx
ui/src/components/Terminal/: TerminalPane.tsx  TerminalPanel.tsx  TerminalTabs.tsx
ui/src/components/WorkspaceBar/: WorkspaceBar.tsx  index.ts
ui/src/context/: SettingsContext.tsx  SysinfoContext.tsx  index.ts
ui/src/ipc/: index.ts
ui/src/styles/: main.css
ui/src/types/: filesystem.ts  index.ts  launcher.ts  privacy.ts  settings.ts  sysinfo.ts  terminal.ts
ui/src/utils/: format.ts  index.ts  theme.ts
website/: 404.html  index.html  style.css
