[package]
name = "launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "eDEX-DE app launcher (Alt+Space Spotlight-style)"

[dependencies]
fuzzy-matcher = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
