[package]
name = "renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "eDEX-DE wgpu GPU renderer"

[dependencies]
wgpu = { workspace = true }
glyphon = { workspace = true }
cosmic-text = { workspace = true }
fontdue = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
