[package]
name = "edex-ui"
version = "0.1.0"
description = "eDEX-UI Hyprland — sci-fi DE frontend for Hyprland"
authors = ["0xnullsect0r"]
license = "GPL-3.0"
repository = "https://github.com/0xnullsect0r/edex-ui-hyprland"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "edex_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
