[package]
name = "edex-ui"
version = "0.3.0"
description = "eDEX-UI Hyprland — sci-fi DE frontend for Hyprland"
authors = ["0xnullsect0r"]
license = "GPL-3.0"
repository = "https://github.com/0xnullsect0r/edex-ui-hyprland"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "edex_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
portable-pty = "0.8"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
sysinfo = { version = "0.32", features = ["linux-netdevs"] }
mime_guess = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
fuzzy-matcher = "0.3"
notify = "6"
rodio = { version = "0.19", features = ["wav"] }
maxminddb = "0.24"
walkdir = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
