[package]
name = "terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "eDEX-DE terminal emulator (termwiz + portable-pty)"

[dependencies]
termwiz = { workspace = true }
portable-pty = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
